# autoconf-analysis-root

./: README.md
MySimpleExample/: Makefile.am  README  configure.ac
MySimpleExample/docs/: Doxyfile.in  Makefile_mod  refman_mod.tex
MySimpleExample/src/: hSimple.cc  mainpage.cc
MySimpleExampleClass/: Makefile.am  README  configure.ac
MySimpleExampleClass/docs/: Doxyfile.in  update_texfile.sh
MySimpleExampleClass/src/: mainpage.cc  runhSimple.cc
MySimpleExampleClass/src/Options/: LinkDef.h  Options.cxx  Options.h
MySimpleExampleClass/src/hSimple/: LinkDef.h  hSimple.cxx  hSimple.h
